Generate Unicode 3.0 with Bazel ucd_generator (#832)
* Port the Archaic scanners
  * Copy  the archaic scanners to ucd_generator.
  * Use JFlex to generate the archaic scanners.
  * Move user code from flex to abstract java class.
  * Port of the code to models used by ucd_generator.
* Call archaic scanners on old versions.
* Generate Unicode 3.0.1 with Bazel ucd_generator
* Remove method accept() ; it's error-prone since it's not systematically invoked from the scanner.

--- a/java/de/jflex/ucd_generator/scanner/BUILD.bazel
+++ b/java/de/jflex/ucd_generator/scanner/BUILD.bazel
@@ -20,6 +20,8 @@ java_library(
 java_library(
     name = "ucd_scanners",
     srcs = [
+        "AbstractArchaicEnumPropertyScanner.java",
+        "AbstractArchaicPropListScanner.java",
         "AbstractBinaryPropertiesFileScanner.java",
         "AbstractEnumeratedPropertyFileScanner.java",
         "AbstractPropertyAliasesScanner.java",
@@ -49,6 +51,9 @@ jflex(
     name = "gen_ucd_scanners",
     srcs = glob(["*.flex"]),
     outputs = [
+        "ArchaicBlocksScanner.java",
+        "ArchaicLineBreakScanner.java",
+        "ArchaicPropListScanner.java",
         "BinaryPropertiesFileScanner.java",
         "EnumeratedPropertyFileScanner.java",
         "PropertyAliasesScanner.java",
