--- a/javatests/de/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/de/jflex/ucd_generator/BUILD.bazel
@@ -48,6 +48,7 @@ java_test(
         "//java/de/jflex/testing/javaast",
         "//java/de/jflex/ucd_generator",
         "//java/de/jflex/ucd_generator/ucd",
+        "//java/de/jflex/ucd_generator/util:java_strings",
         "//jflex/src/main/java/jflex/core/unicode",
         "//third_party/com/google/auto_value",
         "//third_party/com/google/truth",
