Remove 2.1 from UnicodePropertiesTest

--- a/javatests/de/jflex/ucd_generator/emitter/unicode_version/BUILD.bazel
+++ b/javatests/de/jflex/ucd_generator/emitter/unicode_version/BUILD.bazel
@@ -3,6 +3,7 @@ java_test(
     srcs = ["UnicodeVersionEmitterTest.java"],
     deps = [
         "//java/de/jflex/ucd_generator/emitter/unicode_version",
+        "//java/de/jflex/ucd_generator/util:java_strings",
         "//third_party/com/google/truth",
     ],
 )
