Generate Unicode 2.1 with Bazel ucd_generator (#831)
* Generate Unicode 2.1

* Remove hard-coded hack in UnicodePropertiesEmitter.java

* Move escapedBMPChar() to new JavaStrings utils class.

* Simply the AbstractArchaicPropListScanner.java 
  - Use `Multimap<String, CodepointRange>` instead of `Map<String, CodepointRangeSet.Builder>`
  - Delegate the addition of the value to `unicodeData.addBinaryPropertyInterval()`

* Rename field unicodeVersion to unicodeData

* More methods to CodepointRangeSet

* Make test failure more readable

* Add test on SurrogateUtils
* Add isSurrogate(int codepoint)
   Rename isSurrogate() to isSurrogateProperty() because it's only based on that name.
   
* Remove unused CodepointRangeSet.toMutable()

**Issue detected** #833

--- a/javatests/de/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/de/jflex/ucd_generator/BUILD.bazel
@@ -25,6 +25,7 @@ java_test(
         "//third_party/unicode:ucd_11",
         "//third_party/unicode:ucd_12",
         "//third_party/unicode:ucd_12_1",
+        "//third_party/unicode:ucd_2_1_9",
         "//third_party/unicode:ucd_3_0_1",
         "//third_party/unicode:ucd_3_1_1",
         "//third_party/unicode:ucd_3_2_0",
@@ -47,6 +48,7 @@ java_test(
         "//java/de/jflex/testing/javaast",
         "//java/de/jflex/ucd_generator",
         "//java/de/jflex/ucd_generator/ucd",
+        "//java/de/jflex/ucd_generator/util:java_strings",
         "//jflex/src/main/java/jflex/core/unicode",
         "//third_party/com/google/auto_value",
         "//third_party/com/google/truth",
