--- a/jflex/src/main/java/jflex/core/unicode/BUILD.bazel
+++ b/jflex/src/main/java/jflex/core/unicode/BUILD.bazel
@@ -24,7 +24,7 @@ genrule(
     name = "gen_unicode_properties",
     srcs = [
         #        "//third_party/unicode:ucd_1_1_5",
-        #        "//third_party/unicode:ucd_2_0_14",
+        "//third_party/unicode:ucd_2_0_14",
         "//third_party/unicode:ucd_2_1_9",
         "//third_party/unicode:ucd_3_0_1",
         "//third_party/unicode:ucd_3_1_1",
@@ -49,7 +49,7 @@ genrule(
     outs = [
         #        "UnicodeProperties.java",
         #        "Unicode_1_1.java",
-        #        "Unicode_2_0.java",
+        "Unicode_2_0.java",
         "Unicode_2_1.java",
         "Unicode_3_0.java",
         "Unicode_3_1.java",
@@ -73,7 +73,7 @@ genrule(
     ],
     cmd = "$(location //java/de/jflex/ucd_generator:Main)" +
           #          " --version=1.1.5 $(locations //third_party/unicode:ucd_1_1_5)" +
-          #          " --version=2.0.14 $(locations //third_party/unicode:ucd_2_0_14)" +
+          " --version=2.0.14 $(locations //third_party/unicode:ucd_2_0_14)" +
           " --version=2.1.9 $(locations //third_party/unicode:ucd_2_1_9)" +
           " --version=3.0.1 $(locations //third_party/unicode:ucd_3_0_1)" +
           " --version=3.1.1 $(locations //third_party/unicode:ucd_3_1_1)" +
