--- a/jflex/src/main/java/jflex/core/unicode/BUILD.bazel
+++ b/jflex/src/main/java/jflex/core/unicode/BUILD.bazel
@@ -23,7 +23,7 @@ java_library(
 genrule(
     name = "gen_unicode_properties",
     srcs = [
-        #        "//third_party/unicode:ucd_1_1_5",
+        "//third_party/unicode:ucd_1_1_5",
         "//third_party/unicode:ucd_2_0_14",
         "//third_party/unicode:ucd_2_1_9",
         "//third_party/unicode:ucd_3_0_1",
@@ -48,7 +48,7 @@ genrule(
     ],
     outs = [
         #        "UnicodeProperties.java",
-        #        "Unicode_1_1.java",
+        "Unicode_1_1.java",
         "Unicode_2_0.java",
         "Unicode_2_1.java",
         "Unicode_3_0.java",
@@ -72,7 +72,7 @@ genrule(
         "Unicode_12_1.java",
     ],
     cmd = "$(location //java/de/jflex/ucd_generator:Main)" +
-          #          " --version=1.1.5 $(locations //third_party/unicode:ucd_1_1_5)" +
+          " --version=1.1.5 $(locations //third_party/unicode:ucd_1_1_5)" +
           " --version=2.0.14 $(locations //third_party/unicode:ucd_2_0_14)" +
           " --version=2.1.9 $(locations //third_party/unicode:ucd_2_1_9)" +
           " --version=3.0.1 $(locations //third_party/unicode:ucd_3_0_1)" +
