--- a/.github/workflows/gjf.yml
+++ b/.github/workflows/gjf.yml
@@ -17,7 +17,4 @@ jobs:
     - uses: axel-op/googlejavaformat-action@v3.4.0
       with:
         args: --dry-run --set-exit-if-changed
-        files:
-          - java/**/*.java
-          - javatests/**/*.java
-          - jflex/**/*.java
+        files: 'java/**/*.java'
