--- a/jflex/src/main/java/jflex/l10n/BUILD.bazel
+++ b/jflex/src/main/java/jflex/l10n/BUILD.bazel
@@ -1,6 +1,8 @@
 java_library(
     name = "l10n",
     srcs = glob(["*.java"]),
-    resources = ["//jflex:resources"],
     visibility = ["//jflex:__subpackages__"],
+    deps = [
+        "//jflex:resources",
+    ],
 )
