Migrate testsuite/testcases/src/test/cases/unicode-age/UnicodeAge_2_0_age_2_0

--- a/javatests/jflex/core/unicode/BUILD.bazel
+++ b/javatests/jflex/core/unicode/BUILD.bazel
@@ -5,9 +5,11 @@ java_test(
     srcs = [
         "UnicodeAgeTest_2_0.java",
         ":UnicodeAge_2_0_age_1_1",
+        ":UnicodeAge_2_0_age_2_0",
     ],
     data = [
         "UnicodeAge_2_0_age_1_1.output",
+        "UnicodeAge_2_0_age_2_0.output",
         "//java/de/jflex/testcase/resources:All.Unicode.BMP.characters.input",
     ],
     deps = [
@@ -22,4 +24,10 @@ jflex(
     name = "UnicodeAge_2_0_age_1_1",
     srcs = ["UnicodeAge_2_0_age_1_1.flex"],
     outputs = ["UnicodeAge_2_0_age_1_1.java"],
+)
+
+jflex(
+    name = "UnicodeAge_2_0_age_2_0",
+    srcs = ["UnicodeAge_2_0_age_2_0.flex"],
+    outputs = ["UnicodeAge_2_0_age_2_0.java"],
 )
