--- a/javatests/jflex/core/unicode/BUILD.bazel
+++ b/javatests/jflex/core/unicode/BUILD.bazel
@@ -7,11 +7,13 @@ java_test(
         ":UnicodeAge_2_0_age_1_1",
         ":UnicodeAge_2_0_age_2_0",
         ":UnicodeAge_2_0_age_subtraction",
+        ":UnicodeAge_2_0_age_unassigned",
     ],
     data = [
         "UnicodeAge_2_0_age_1_1.output",
         "UnicodeAge_2_0_age_2_0.output",
         "UnicodeAge_2_0_age_subtraction.output",
+        "UnicodeAge_2_0_age_unassigned.output",
         "//java/de/jflex/testcase/resources:All.Unicode.BMP.characters.input",
     ],
     deps = [
@@ -38,4 +40,10 @@ jflex(
     name = "UnicodeAge_2_0_age_subtraction",
     srcs = ["UnicodeAge_2_0_age_subtraction.flex"],
     outputs = ["UnicodeAge_2_0_age_subtraction.java"],
+)
+
+jflex(
+    name = "UnicodeAge_2_0_age_unassigned",
+    srcs = ["UnicodeAge_2_0_age_unassigned.flex"],
+    outputs = ["UnicodeAge_2_0_age_unassigned.java"],
 )
