Add the dependency test to all test cases.

--- a/javatests/de/jflex/testcase/ccl_16/BUILD.bazel
+++ b/javatests/de/jflex/testcase/ccl_16/BUILD.bazel
@@ -1,4 +1,10 @@
 load("@jflex_rules//jflex:jflex.bzl", "jflex")
+load("//scripts:check_deps.bzl", "check_deps")
+
+check_deps(
+    name = "deps_to_bootstrap_jflex_test",
+    prohibited = "@jflex_rules//jflex:jflex_bin",
+)
 
 jflex(
     name = "gen_ccl_scanner",
