--- a/javatests/de/jflex/testcase/cupsym/BUILD.bazel
+++ b/javatests/de/jflex/testcase/cupsym/BUILD.bazel
@@ -4,6 +4,12 @@
 # Feel free to improve.
 
 load("@jflex_rules//jflex:jflex.bzl", "jflex")
+load("//scripts:check_deps.bzl", "check_deps")
+
+check_deps(
+    name = "deps_to_bootstrap_jflex_test",
+    prohibited = "@jflex_rules//jflex:jflex_bin",
+)
 
 jflex(
     name = "gen_cupsym_scanner",
