--- a/javatests/de/jflex/testcase/caseless_jflex/BUILD.bazel
+++ b/javatests/de/jflex/testcase/caseless_jflex/BUILD.bazel
@@ -1,6 +1,12 @@
 # caseless
 
 load("@jflex_rules//jflex:jflex.bzl", "jflex")
+load("//scripts:check_deps.bzl", "check_deps")
+
+check_deps(
+    name = "deps_to_bootstrap_jflex_test",
+    prohibited = "@jflex_rules//jflex:jflex_bin",
+)
 
 jflex(
     name = "gen_caseless_scanner",
