--- a/javatests/de/jflex/testcase/empty_match/BUILD.bazel
+++ b/javatests/de/jflex/testcase/empty_match/BUILD.bazel
@@ -2,6 +2,12 @@
 # Feel free to improve.
 
 load("@jflex_rules//jflex:jflex.bzl", "jflex")
+load("//scripts:check_deps.bzl", "check_deps")
+
+check_deps(
+    name = "deps_to_bootstrap_jflex_test",
+    prohibited = "@jflex_rules//jflex:jflex_bin",
+)
 
 # emptymatch
 
