--- a/javatests/de/jflex/testcase/spoon_feed_reader/BUILD.bazel
+++ b/javatests/de/jflex/testcase/spoon_feed_reader/BUILD.bazel
@@ -1,6 +1,12 @@
 # Copyright (C) 2020 Google, LLC.
 # SPDX-License-Identifier: BSD-3-Clause
 load("@jflex_rules//jflex:jflex.bzl", "jflex")
+load("//scripts:check_deps.bzl", "check_deps")
+
+check_deps(
+    name = "deps_to_bootstrap_jflex_test",
+    prohibited = "@jflex_rules//jflex:jflex_bin",
+)
 
 jflex(
     name = "gen_SpoonFeedReader_scanner",
