--- a/java/de/jflex/migration/unicodedatatest/BUILD.bazel
+++ b/java/de/jflex/migration/unicodedatatest/BUILD.bazel
@@ -3,22 +3,20 @@ java_binary(
     srcs = [
         "AbstractGenerator.java",
         "BuildFileGenerator.java",
-        "BuildFileTemplateVars.java",
         "JavaResources.java",
         "JavaTestGenerator.java",
         "Migrator.java",
-        "UnicodeAge.java",
-        "UnicodeAgeTemplateVars.java",
-        "UnicodeAgeTestTemplateVars.java",
+        "UnicodeAgeGenerator.java",
     ],
     main_class = "de.jflex.migration.unicodedatatest.Migrator",
     resources = [
         "BUILD.vm",
         "UnicodeAge.flex.vm",
+        "UnicodeAgeSubtraction.flex.vm",
         "UnicodeAgeTest_x_y.java.vm",
     ],
     deps = [
-        ":output",
+        ":template_vars",
         "//java/de/jflex/util/javac:package_util",
         "//java/de/jflex/velocity",
         "//java/de/jflex/version",
@@ -29,11 +27,20 @@ java_binary(
 )
 
 java_library(
-    name = "output",
-    srcs = ["Output.java"],
+    name = "template_vars",
+    srcs = [
+        "BuildFileTemplateVars.java",
+        "Output.java",
+        "Pair.java",
+        "UnicodeAgeSubtractionTemplateVars.java",
+        "UnicodeAgeTemplateVars.java",
+        "UnicodeAgeTestTemplateVars.java",
+    ],
     deps = [
         "//java/de/jflex/util/javac:package_util",
+        "//java/de/jflex/velocity",
         "//java/de/jflex/version",
         "//third_party/com/google/auto_value",
+        "//third_party/com/google/guava",
     ],
 )
