--- a/java/de/jflex/migration/unicodedatatest/testage/BUILD.bazel
+++ b/java/de/jflex/migration/unicodedatatest/testage/BUILD.bazel
@@ -2,14 +2,12 @@ java_binary(
     name = "migrator",
     testonly = True,
     srcs = [
-        "AbstractGenerator.java",
+        "AgeMigrator.java",
         "BuildFileGenerator.java",
-        "JavaResources.java",
-        "JavaTestGenerator.java",
-        "Migrator.java",
-        "UnicodeAgeGenerator.java",
+        "UnicodeAgeFlexGenerator.java",
+        "UnicodeAgeTestGenerator.java",
     ],
-    main_class = "de.jflex.migration.unicodedatatest.Migrator",
+    main_class = "de.jflex.migration.unicodedatatest.testage.AgeMigrator",
     resources = [
         "BUILD.vm",
         "UnicodeAge.flex.vm",
@@ -18,6 +16,8 @@ java_binary(
     ],
     deps = [
         ":template_vars",
+        "//java/de/jflex/migration/unicodedatatest/base",
+        "//java/de/jflex/migration/unicodedatatest/util:java_resources",
         "//java/de/jflex/testing/unicodedata",
         "//java/de/jflex/util/javac:package_util",
         "//java/de/jflex/velocity",
@@ -33,18 +33,16 @@ java_library(
     testonly = True,
     srcs = [
         "BuildFileTemplateVars.java",
-        "Output.java",
-        "Pair.java",
+        "UnicodeAgeFlexTemplateVars.java",
         "UnicodeAgeSubtractionTemplateVars.java",
-        "UnicodeAgeTemplateVars.java",
         "UnicodeAgeTestTemplateVars.java",
     ],
     deps = [
+        "//java/de/jflex/migration/unicodedatatest/base",
         "//java/de/jflex/testing/unicodedata",
         "//java/de/jflex/util/javac:package_util",
         "//java/de/jflex/velocity",
         "//java/de/jflex/version",
-        "//third_party/com/google/auto_value",
         "//third_party/com/google/guava",
     ],
 )
