Initial version of a BlockTest generator
Move CodepointRange in a shared pacakge.

--- a/java/de/jflex/migration/unicodedatatest/base/BUILD.bazel
+++ b/java/de/jflex/migration/unicodedatatest/base/BUILD.bazel
@@ -1,7 +1,10 @@
 java_library(
     name = "base",
     srcs = glob(["*.java"]),
-    visibility = ["//java/de/jflex/migration/unicodedatatest:__subpackages__"],
+    visibility = [
+        "//java/de/jflex/migration/unicodedatatest:__subpackages__",
+        "//javatests/de/jflex/migration/unicodedatatest/base:__pkg__",
+    ],
     deps = [
         "//java/de/jflex/util/javac:package_util",
         "//java/de/jflex/velocity",
