Re-generate UnicodeBlocks_2_0.flex with Bazel

--- a/java/de/jflex/ucd/BUILD.bazel
+++ b/java/de/jflex/ucd/BUILD.bazel
@@ -6,5 +6,6 @@ java_library(
     ],
     deps = [
         "//third_party/com/google/auto_value",
+        "//third_party/com/google/guava",
     ],
 )
