Rename unicode target as ucd_x_y for consistency

--- a/java/de/jflex/ucd_generator/BUILD.bazel
+++ b/java/de/jflex/ucd_generator/BUILD.bazel
@@ -44,19 +44,19 @@ genrule(
         "//third_party/unicode:ucd_3_2_0",
         "//third_party/unicode:ucd_4_0_1",
         "//third_party/unicode:ucd_4_1_0",
-        "//third_party/unicode:ucd_5_0_0",
-        "//third_party/unicode:ucd_5_1_0",
-        "//third_party/unicode:ucd_5_2_0",
-        "//third_party/unicode:ucd_6_0_0",
-        "//third_party/unicode:ucd_6_1_0",
-        "//third_party/unicode:ucd_6_2_0",
-        "//third_party/unicode:ucd_6_3_0",
-        "//third_party/unicode:ucd_7",
-        "//third_party/unicode:ucd_8",
-        "//third_party/unicode:ucd_9",
-        "//third_party/unicode:ucd_10",
-        "//third_party/unicode:ucd_11",
-        "//third_party/unicode:ucd_12",
+        "//third_party/unicode:ucd_5_0",
+        "//third_party/unicode:ucd_5_1",
+        "//third_party/unicode:ucd_5_2",
+        "//third_party/unicode:ucd_6_0",
+        "//third_party/unicode:ucd_6_1",
+        "//third_party/unicode:ucd_6_2",
+        "//third_party/unicode:ucd_6_3",
+        "//third_party/unicode:ucd_7_0",
+        "//third_party/unicode:ucd_8_0",
+        "//third_party/unicode:ucd_9_0",
+        "//third_party/unicode:ucd_10_0",
+        "//third_party/unicode:ucd_11_0",
+        "//third_party/unicode:ucd_12_0",
         "//third_party/unicode:ucd_12_1",
     ],
     outs = [
