--- a/javatests/de/jflex/ucd_generator/BUILD.bazel
+++ b/javatests/de/jflex/ucd_generator/BUILD.bazel
@@ -2,7 +2,7 @@ java_test(
     name = "MainTest",
     srcs = ["MainTest.java"],
     data = [
-        "//third_party/unicode:ucd_10",
+        "//third_party/unicode:ucd_10_0",
         "//third_party/unicode:ucd_3_1_1",
         "//third_party/unicode:ucd_4_0_1",
     ],
@@ -21,9 +21,9 @@ java_test(
         "Unicode_10_0.java.golden",
         "Unicode_5_0.java.golden",
         "Unicode_6_3.java.golden",
-        "//third_party/unicode:ucd_10",
-        "//third_party/unicode:ucd_11",
-        "//third_party/unicode:ucd_12",
+        "//third_party/unicode:ucd_10_0",
+        "//third_party/unicode:ucd_11_0",
+        "//third_party/unicode:ucd_12_0",
         "//third_party/unicode:ucd_12_1",
         "//third_party/unicode:ucd_1_1_5",
         "//third_party/unicode:ucd_2_0_14",
@@ -33,16 +33,16 @@ java_test(
         "//third_party/unicode:ucd_3_2_0",
         "//third_party/unicode:ucd_4_0_1",
         "//third_party/unicode:ucd_4_1_0",
-        "//third_party/unicode:ucd_5_0_0",
-        "//third_party/unicode:ucd_5_1_0",
-        "//third_party/unicode:ucd_5_2_0",
-        "//third_party/unicode:ucd_6_0_0",
-        "//third_party/unicode:ucd_6_1_0",
-        "//third_party/unicode:ucd_6_2_0",
-        "//third_party/unicode:ucd_6_3_0",
-        "//third_party/unicode:ucd_7",
-        "//third_party/unicode:ucd_8",
-        "//third_party/unicode:ucd_9",
+        "//third_party/unicode:ucd_5_0",
+        "//third_party/unicode:ucd_5_1",
+        "//third_party/unicode:ucd_5_2",
+        "//third_party/unicode:ucd_6_0",
+        "//third_party/unicode:ucd_6_1",
+        "//third_party/unicode:ucd_6_2",
+        "//third_party/unicode:ucd_6_3",
+        "//third_party/unicode:ucd_7_0",
+        "//third_party/unicode:ucd_8_0",
+        "//third_party/unicode:ucd_9_0",
     ],
     deps = [
         ":tested_versions",
@@ -62,7 +62,7 @@ java_library(
     testonly = True,
     srcs = ["TestedVersions.java"],
     data = [
-        "//third_party/unicode:ucd_10",
+        "//third_party/unicode:ucd_10_0",
     ],
     visibility = ["//javatests:__subpackages__"],
     deps = [
