--- a/java/de/jflex/ucd_generator/BUILD.bazel
+++ b/java/de/jflex/ucd_generator/BUILD.bazel
@@ -93,19 +93,19 @@ genrule(
           " --version=3.2.0 $(locations //third_party/unicode:ucd_3_2_0)" +
           " --version=4.0.1 $(locations //third_party/unicode:ucd_4_0_1)" +
           " --version=4.1.0 $(locations //third_party/unicode:ucd_4_1_0)" +
-          " --version=5.0.0 $(locations //third_party/unicode:ucd_5_0_0)" +
-          " --version=5.1.0 $(locations //third_party/unicode:ucd_5_1_0)" +
-          " --version=5.2.0 $(locations //third_party/unicode:ucd_5_2_0)" +
-          " --version=6.0.0 $(locations //third_party/unicode:ucd_6_0_0)" +
-          " --version=6.1.0 $(locations //third_party/unicode:ucd_6_1_0)" +
-          " --version=6.2.0 $(locations //third_party/unicode:ucd_6_2_0)" +
-          " --version=6.3.0 $(locations //third_party/unicode:ucd_6_3_0)" +
-          " --version=7.0.0 $(locations //third_party/unicode:ucd_7)" +
-          " --version=8.0.0 $(locations //third_party/unicode:ucd_8)" +
-          " --version=9.0.0 $(locations //third_party/unicode:ucd_9)" +
-          " --version=10.0.0 $(locations //third_party/unicode:ucd_10)" +
-          " --version=11.0.0 $(locations //third_party/unicode:ucd_11)" +
-          " --version=12.0.0 $(locations //third_party/unicode:ucd_12)" +
+          " --version=5.0.0 $(locations //third_party/unicode:ucd_5_0)" +
+          " --version=5.1.0 $(locations //third_party/unicode:ucd_5_1)" +
+          " --version=5.2.0 $(locations //third_party/unicode:ucd_5_2)" +
+          " --version=6.0.0 $(locations //third_party/unicode:ucd_6_0)" +
+          " --version=6.1.0 $(locations //third_party/unicode:ucd_6_1)" +
+          " --version=6.2.0 $(locations //third_party/unicode:ucd_6_2)" +
+          " --version=6.3.0 $(locations //third_party/unicode:ucd_6_3)" +
+          " --version=7.0.0 $(locations //third_party/unicode:ucd_7_0)" +
+          " --version=8.0.0 $(locations //third_party/unicode:ucd_8_0)" +
+          " --version=9.0.0 $(locations //third_party/unicode:ucd_9_0)" +
+          " --version=10.0.0 $(locations //third_party/unicode:ucd_10_0)" +
+          " --version=11.0.0 $(locations //third_party/unicode:ucd_11_0)" +
+          " --version=12.0.0 $(locations //third_party/unicode:ucd_12_0)" +
           " --version=12.1.0 $(locations //third_party/unicode:ucd_12_1)" +
           " --out=$(@D)",
     tools = ["//java/de/jflex/ucd_generator:Main"],
