--- a/javatests/de/jflex/testcase/unicode/unicode_11_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_11_0/BUILD.bazel
@@ -215,6 +215,10 @@ java_test(
         ":UnicodeBlocks_11_0",
         "UnicodeBlocksTest_11_0.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
