--- a/javatests/de/jflex/testcase/unicode/unicode_3_1/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_3_1/BUILD.bazel
@@ -95,6 +95,10 @@ java_test(
         ":UnicodeBlocks_3_1",
         "UnicodeBlocksTest_3_1.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
