--- a/javatests/de/jflex/testcase/unicode/unicode_6_2/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_6_2/BUILD.bazel
@@ -167,6 +167,10 @@ java_test(
         ":UnicodeBlocks_6_2",
         "UnicodeBlocksTest_6_2.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
