--- a/javatests/de/jflex/testcase/unicode/unicode_7_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_7_0/BUILD.bazel
@@ -183,6 +183,10 @@ java_test(
         ":UnicodeBlocks_7_0",
         "UnicodeBlocksTest_7_0.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
