--- a/javatests/de/jflex/testcase/unicode/unicode_8_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_8_0/BUILD.bazel
@@ -191,6 +191,10 @@ java_test(
         ":UnicodeBlocks_8_0",
         "UnicodeBlocksTest_8_0.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
