--- a/javatests/de/jflex/testcase/unicode/unicode_12_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_12_0/BUILD.bazel
@@ -223,6 +223,10 @@ java_test(
         ":UnicodeBlocks_12_0",
         "UnicodeBlocksTest_12_0.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
