--- a/javatests/de/jflex/testcase/unicode/unicode_12_1/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_12_1/BUILD.bazel
@@ -231,6 +231,10 @@ java_test(
         ":UnicodeBlocks_12_1",
         "UnicodeBlocksTest_12_1.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
