--- a/javatests/de/jflex/testcase/unicode/unicode_2_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_2_0/BUILD.bazel
@@ -71,6 +71,10 @@ java_test(
         ":UnicodeBlocks_2_0",
         "UnicodeBlocksTest_2_0.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
