--- a/javatests/de/jflex/testcase/unicode/unicode_3_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_3_0/BUILD.bazel
@@ -87,6 +87,10 @@ java_test(
         ":UnicodeBlocks_3_0",
         "UnicodeBlocksTest_3_0.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
