--- a/javatests/de/jflex/testcase/unicode/unicode_4_1/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_4_1/BUILD.bazel
@@ -119,6 +119,10 @@ java_test(
         ":UnicodeBlocks_4_1",
         "UnicodeBlocksTest_4_1.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
