--- a/javatests/de/jflex/testcase/unicode/unicode_5_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_5_0/BUILD.bazel
@@ -127,6 +127,10 @@ java_test(
         ":UnicodeBlocks_5_0",
         "UnicodeBlocksTest_5_0.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
