--- a/javatests/de/jflex/testcase/unicode/unicode_5_1/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_5_1/BUILD.bazel
@@ -135,6 +135,10 @@ java_test(
         ":UnicodeBlocks_5_1",
         "UnicodeBlocksTest_5_1.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
