--- a/javatests/de/jflex/testcase/unicode/unicode_6_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_6_0/BUILD.bazel
@@ -151,6 +151,10 @@ java_test(
         ":UnicodeBlocks_6_0",
         "UnicodeBlocksTest_6_0.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
