--- a/javatests/de/jflex/testcase/unicode/unicode_6_1/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_6_1/BUILD.bazel
@@ -159,6 +159,10 @@ java_test(
         ":UnicodeBlocks_6_1",
         "UnicodeBlocksTest_6_1.java",
     ],
+    deps = [
+        "//java/de/jflex/testing/unicodedata",
+        "//java/de/jflex/util/scanner:scanner_factory",
+    ]
 )
 
 jflex(
