Make getBlocks() return a full block specification, so that it can properly be tested.

--- a/java/de/jflex/testing/unicodedata/BUILD.bazel
+++ b/java/de/jflex/testing/unicodedata/BUILD.bazel
@@ -7,8 +7,10 @@ java_library(
         "//javatests:__subpackages__",
     ],
     deps = [
+        "//java/de/jflex/ucd",
         "//java/de/jflex/util/scanner:scanner_factory",
         "//java/de/jflex/version",
+        "//third_party/com/google/auto_value",
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
     ],
