Generate Blocks tests

--- a/javatests/de/jflex/testcase/unicode/unicode_11_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_11_0/BUILD.bazel
@@ -215,10 +215,14 @@ java_test(
         ":UnicodeBlocks_11_0",
         "UnicodeBlocksTest_11_0.java",
     ],
+    data = [
+        "//java/de/jflex/testcase/resources:All.Unicode.characters.input",
+    ],
     deps = [
         "//java/de/jflex/testing/unicodedata",
         "//java/de/jflex/util/scanner:scanner_factory",
-    ]
+        "//third_party/com/google/truth",
+    ],
 )
 
 jflex(
