--- a/javatests/de/jflex/testcase/unicode/unicode_2_1/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_2_1/BUILD.bazel
@@ -79,10 +79,14 @@ java_test(
         ":UnicodeBlocks_2_1",
         "UnicodeBlocksTest_2_1.java",
     ],
+    data = [
+        "//java/de/jflex/testcase/resources:All.Unicode.BMP.characters.input",
+    ],
     deps = [
         "//java/de/jflex/testing/unicodedata",
         "//java/de/jflex/util/scanner:scanner_factory",
-    ]
+        "//third_party/com/google/truth",
+    ],
 )
 
 jflex(
