--- a/javatests/de/jflex/testcase/unicode/unicode_3_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_3_0/BUILD.bazel
@@ -87,10 +87,14 @@ java_test(
         ":UnicodeBlocks_3_0",
         "UnicodeBlocksTest_3_0.java",
     ],
+    data = [
+        "//java/de/jflex/testcase/resources:All.Unicode.BMP.characters.input",
+    ],
     deps = [
         "//java/de/jflex/testing/unicodedata",
         "//java/de/jflex/util/scanner:scanner_factory",
-    ]
+        "//third_party/com/google/truth",
+    ],
 )
 
 jflex(
