--- a/javatests/de/jflex/testcase/unicode/unicode_3_2/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_3_2/BUILD.bazel
@@ -103,10 +103,14 @@ java_test(
         ":UnicodeBlocks_3_2",
         "UnicodeBlocksTest_3_2.java",
     ],
+    data = [
+        "//java/de/jflex/testcase/resources:All.Unicode.characters.input",
+    ],
     deps = [
         "//java/de/jflex/testing/unicodedata",
         "//java/de/jflex/util/scanner:scanner_factory",
-    ]
+        "//third_party/com/google/truth",
+    ],
 )
 
 jflex(
