--- a/javatests/de/jflex/testcase/unicode/unicode_5_0/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_5_0/BUILD.bazel
@@ -127,10 +127,14 @@ java_test(
         ":UnicodeBlocks_5_0",
         "UnicodeBlocksTest_5_0.java",
     ],
+    data = [
+        "//java/de/jflex/testcase/resources:All.Unicode.characters.input",
+    ],
     deps = [
         "//java/de/jflex/testing/unicodedata",
         "//java/de/jflex/util/scanner:scanner_factory",
-    ]
+        "//third_party/com/google/truth",
+    ],
 )
 
 jflex(
