--- a/javatests/de/jflex/testcase/unicode/unicode_6_1/BUILD.bazel
+++ b/javatests/de/jflex/testcase/unicode/unicode_6_1/BUILD.bazel
@@ -159,10 +159,14 @@ java_test(
         ":UnicodeBlocks_6_1",
         "UnicodeBlocksTest_6_1.java",
     ],
+    data = [
+        "//java/de/jflex/testcase/resources:All.Unicode.characters.input",
+    ],
     deps = [
         "//java/de/jflex/testing/unicodedata",
         "//java/de/jflex/util/scanner:scanner_factory",
-    ]
+        "//third_party/com/google/truth",
+    ],
 )
 
 jflex(
