--- a/java/de/jflex/migration/unicodedatatest/BUILD.bazel
+++ b/java/de/jflex/migration/unicodedatatest/BUILD.bazel
@@ -14,6 +14,7 @@ java_binary(
     deps = [
         "//java/de/jflex/migration/unicodedatatest/base",
         "//java/de/jflex/migration/util:java_resources",
+        "//java/de/jflex/testing/unicodedata",
         "//java/de/jflex/util/javac:package_util",
         "//java/de/jflex/velocity",
         "//java/de/jflex/version",
